# cpg-vuln-detection

./: .gitignore  README.md  pyproject.toml  requirements-eit.txt
configs/: default.yaml  end2end_codebert_mil.yaml  full_anon.yaml  ramp_v3_fusion3.yaml  semantic_anon.yaml  source_map_overrides.csv
scripts/: assert_eit.ps1  audit_intermediate_representations.py  audit_normalized_texts.py  make_paper_explainability_figures.py  make_report_visualizations.py  make_visualizations.py  probe_cross_norm_fixed05_ensemble.py  probe_fixed05_prediction_ensemble.py  probe_full_anon_ensemble.py  probe_full_anon_multi_ensemble.py  rename_robustness.py  run_all.ps1  setup_eit.ps1
src/cpg_vuln/: __init__.py  __main__.py  cli.py  config.py  (+1 more)
tests/: __init__.py  conftest.py  helpers.py  test_audit.py  test_batch.py  test_cli.py  test_cli_training_options.py  test_codebert.py  test_devign_model.py  test_end2end_raw_code.py  test_end2end_training.py  test_ensemble_probe.py  test_environment_guard.py  test_feature_cache.py  test_fingerprint.py  test_graphml_views.py  test_hard_negative_bank.py  test_metrics.py  test_models.py  test_normalization.py  test_pair_dataset.py  test_platform_compat.py  test_ramp_checkpoint_evaluation.py  test_ramp_metrics.py  test_ramp_v2_models.py  test_representation_audit.py  test_risk_motif.py  test_runner.py  test_source_map.py  test_split.py  test_text_features.py  test_threshold_reports.py  test_topology_build.py  test_topology_store.py  test_training.py  test_training_losses.py  test_visualization.py  test_weak_baselines.py  test_word2vec.py
(+48 files in other folders)
