[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpg-vuln"
version = "0.1.0"
description = "Reproducible CPG-based function-level vulnerability detection experiments."
requires-python = ">=3.13,<3.14"
dependencies = [
  "gensim==4.4.0",
  "matplotlib>=3.10,<3.11",
  "numpy>=2.2,<2.3",
  "pandas>=2.2,<2.3",
  "PyYAML>=6.0,<7",
  "scikit-learn>=1.6,<1.7",
  "seaborn>=0.13,<0.14",
  "torch==2.7.0",
  "torch-geometric==2.7.0",
  "tqdm>=4.67,<5",
  "transformers>=4.51,<4.52",
]

[project.optional-dependencies]
test = ["pytest>=8.3,<9"]

[project.scripts]
cpg-vuln = "cpg_vuln.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

